message component with props

--- a/resources/views/vue.blade.html
+++ b/resources/views/vue.blade.html
@@ -5,6 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <style>
+        .bulma{
+            margin: 50px 80px;
+        }
+    </style>
 
     <title>Document</title>
 
@@ -12,7 +19,8 @@
 <body>
 
 <div id="root">
-    <task-list></task-list>
+    <message title='This is the title' body="This is the body"></message>
+    <message title='This is another title' body="This is another body"></message>
 </div>
 
 
